--- a/api/.env
+++ b/api/.env
@@ -1,2 +1,2 @@
-MONGO = your_uri
+MONGO = mongodb+srv://srinidhi644:<Srinidhi1234>@cluster0.1vd3rad.mongodb.net/test
 JWT = 8hEnPGeoBqGUT6zksxt4G95gW+uMdzwe7EVaRnp0xRI=
